ApiHorario/ApiHorario/crud-reticula-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-crud
  labels:
    app: api-crud 
spec:
  selector:
    matchLabels:
      app: api-crud
  replicas: 7
  template:
    metadata:
      labels:
        app: api-crud
    spec:
      containers:
        - name: api-crud
          image: dianar12/apihorario-php-apache-environment:v1
          ports:
            - containerPort: 80
