ApiHorario/ApiHorario/crud-reticula-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-crud
  labels:
    tier: api-crud
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 31000
    protocol: TCP
  selector:
    tier: api-crud
