ApiHorario/ApiHorario/db-reticula-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: horario-db
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  clusterIP: None
