ApiHorario/ApiHorario/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "app.dramirez.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apihorario
            port:
              number: 80
